[gd_scene load_steps=19 format=3 uid="uid://c6yylqny5blw1"]

[ext_resource type="Script" uid="uid://ce6v4pggr6vbl" path="res://scripts/entity/drops/resource_pickup.gd" id="1_t50uq"]
[ext_resource type="Texture2D" uid="uid://i6plrgcblxll" path="res://assets/textures/effects/effect_sheet.png" id="2_15y04"]
[ext_resource type="PackedScene" uid="uid://bbcnk1lc1bia3" path="res://scenes/component/player_distance.tscn" id="2_cr552"]
[ext_resource type="AudioStream" uid="uid://c0vpn33j18e87" path="res://assets/sounds/research_pickup.wav" id="2_j15wr"]
[ext_resource type="PackedScene" uid="uid://dgefqrqeh3evl" path="res://scenes/component/movement.tscn" id="2_vcixg"]
[ext_resource type="Texture2D" uid="uid://ccn0ikslju12v" path="res://assets/textures/effects/2d_point_light.png" id="5_p1itl"]

[sub_resource type="AtlasTexture" id="AtlasTexture_15y04"]
atlas = ExtResource("2_15y04")
region = Rect2(8, 48, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_j15wr"]
atlas = ExtResource("2_15y04")
region = Rect2(0, 48, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1itl"]
atlas = ExtResource("2_15y04")
region = Rect2(0, 56, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_ogvc0"]
atlas = ExtResource("2_15y04")
region = Rect2(8, 56, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_vcixg"]
atlas = ExtResource("2_15y04")
region = Rect2(8, 48, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_n61qj"]
atlas = ExtResource("2_15y04")
region = Rect2(32, 48, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_hr074"]
atlas = ExtResource("2_15y04")
region = Rect2(40, 48, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_l4xq5"]
atlas = ExtResource("2_15y04")
region = Rect2(48, 48, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_8mba6"]
atlas = ExtResource("2_15y04")
region = Rect2(72, 48, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_db2ku"]
atlas = ExtResource("2_15y04")
region = Rect2(56, 48, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_ogvc0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_15y04")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j15wr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1itl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ogvc0")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vcixg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n61qj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hr074")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l4xq5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8mba6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_db2ku")
}],
"loop": false,
"name": &"pop",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_0ofgt"]
radius = 4.0

[node name="ResourcePickup" type="Area2D" groups=["Research"]]
collision_layer = 16
collision_mask = 2
monitoring = false
script = ExtResource("1_t50uq")

[node name="ResearchPickup" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_j15wr")

[node name="Movement" parent="." node_paths=PackedStringArray("entity") instance=ExtResource("2_vcixg")]
entity = NodePath("..")
initial_speed = 100.0
max_speed = 200.0
acceleration = 100.0
deceleration = 300.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
visibility_layer = 3
z_index = 10
sprite_frames = SubResource("SpriteFrames_ogvc0")
frame_progress = 0.0687218

[node name="aura" type="Sprite2D" parent="AnimatedSprite2D"]
modulate = Color(0.993785, 0.884046, 0.633804, 1)
visibility_layer = 3
z_index = -1
scale = Vector2(0.05, 0.05)
texture = ExtResource("5_p1itl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_0ofgt")

[node name="ScanTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="PlayerDistance" parent="." node_paths=PackedStringArray("entity") instance=ExtResource("2_cr552")]
entity = NodePath("..")
distance = 500.0

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="ScanTimer" to="." method="_on_scan_timer_timeout"]
